# NodeDataFlowEditor

./: .gitignore  cmakeLists.txt  readme.md
NodeDataFlowEditor/: cmakeLists.txt
NodeDataFlowEditor/factory/include/factory/: NodeFactory.hpp
NodeDataFlowEditor/factory/src/: NodeFactory.cpp
NodeDataFlowEditor/model/include/model/: NodeModel.hpp
NodeDataFlowEditor/model/src/: NodeModel.cpp
NodeDataFlowEditor/presenter/include/presenter/: NodePresenter.hpp
NodeDataFlowEditor/presenter/src/: NodePresenter.cpp
NodeDataFlowEditor/taggable/include/taggable/: TagApplicator.hpp  TagRegistry.hpp  Taggable.hpp
NodeDataFlowEditor/tests/: GraphRegistryTest.cpp  GroupItemTest.cpp  NodeFactoryTest.cpp  NodeItemTest.cpp  TagApplicatorTest.cpp  TagRegistryTest.cpp  TaggableTest.cpp  TestConnectionItem.cpp  TestPortLabel.cpp  cmakeLists.txt
NodeDataFlowEditor/utility/include/utility/: GraphRegistry.hpp  GroupDescriptor.hpp  NodeDescriptor.hpp  NodeHelper.hpp  WidgetVisitor.hpp
NodeDataFlowEditor/utility/src/: GraphRegistry.cpp  NodeHelper.cpp  WidgetVisitor.cpp
NodeDataFlowEditor/view/include/view/: ConnectionItem.hpp  ConnectionPort.hpp  EditableLabelItem.hpp  GraphScene.hpp  GraphView.hpp  GroupItem.hpp  INodeView.hpp  NodeItem.hpp  NodeItemViewAdapter.hpp  PenButton.hpp  PortLabel.hpp  (+1 more)
NodeDataFlowEditor/view/src/: ConnectionItem.cpp  EditableLabelItem.cpp  GraphScene.cpp  GraphView.cpp  GroupItem.cpp  NodeItem.cpp  NodeItemViewAdapter.cpp  PenButton.cpp  PortLabel.cpp  PortView.cpp
demo/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  PortTags.hpp  main.cpp
